Find  to answer

--- a/my Calculate/Base.lproj/Main.storyboard
+++ b/my Calculate/Base.lproj/Main.storyboard
@@ -71,7 +71,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53.600000000000001" y="-45.42728635682159"/>
+            <point key="canvasLocation" x="-1223" y="-918"/>
         </scene>
     </scenes>
 </document>
